# Monster-Ai-ZH-TW

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  ELECTRON_BUILD.md  LICENSE  MonsterAi 自主學習系統架構.md  README.md  WEB_UI_README.md  always-on-monsterguard.bat  auto-guardian.bat  build-guardian-aab.bat  build-guardian-apk.bat  config.docker.yaml  config.example.yaml  constraints.txt  diagnose-adb.bat  discord.token.local.example  docker-compose.guard.yml  docker-compose.yml  gen-release-keystore.bat  guardian-status.bat  install-apk-adb.bat  llm.model.txt  main.py  migrate-error-tracking.mjs  package.json  pnpm-lock.yaml  requirements-dev.txt  requirements-generate.txt  requirements-train.txt  requirements.txt  restart-self-heal.bat  run-dev.bat  run-monsterguard.bat  run.bat  run.sh  seed-tutorials.cjs  seed-tutorials.mjs  (+3 more)
Monster-ai Zh-Tw/: GITHUB_上傳說明.md  README.en.md  README.md
client/: index.html
docker/: .env.example
drizzle/: 0001_typical_stick.sql  0004_last_quasar.sql  0005_amusing_guardsmen.sql  0007_black_captain_midlands.sql  0010_past_dark_beast.sql  0011_grey_switch.sql  0012_fix_characters_columns.sql  0015_real_war_machine.sql  0016_sparkling_zzzax.sql  0017_shallow_nemesis.sql  (+4 more)
monster-ai-webui/: .gitignore  I_UNDERSTAND.md  README.md  pyproject.toml  requirements.txt
monster-ai-webui/scripts/: sync_assets.py
monster-ai-webui/src/monster_ai_webui/: __init__.py  app.py  config.py  health.py  launcher.py  main.py  proxy.py  static_resolver.py
monster-ai-webui/src/monster_ai_webui/web/fallback/: index.html  roleplay.js
(+1701 files in other folders)
