[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monster-ai-webui"
version = "0.1.0"
description = "Standalone pip-installable Web UI gateway for Monster AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.7.0",
  "websockets>=12.0",
]

[project.scripts]
monster-ai-webui = "monster_ai_webui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/monster_ai_webui"]

[tool.hatch.build.targets.wheel.force-include]
"src/monster_ai_webui/web" = "monster_ai_webui/web"

[tool.hatch.build.targets.sdist]
include = [
  "/src/monster_ai_webui",
  "/scripts",
  "/README.md",
  "/I_UNDERSTAND.md",
  "/requirements.txt",
]